✅add 2/3 blocks in header(no-adaptation)

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,59 @@
 <header class="header">
-	<div class="header__container">
+	<div class="header__top top-header">
+		<div class="top-header__container">
+			<div class="top-header__menu menu">
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Новости</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+				<a href="#" class="top-header__user _icon-user_face">Личный кабинет</a>
+				<button type="button" class="icon-menu"><span></span></button>
+		</div>
 	</div>
+
+		<div class="header__general general-header">
+			<div class="general-header__container">
+				<a href="" class="general-header__logo"></a>
+				<div class="general-header__search">
+					<form action="#" class="search-header">
+						<button type="submit" class="search-header__button"></button>
+						<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Поиск" class="search-header__input">
+					</form>
+				</div>
+
+				<div class="general-header__actions actions-header">
+					<a href="#" class="actions-header__locarion _icon-location">Полтава</a>
+					<div class="actions-header__phones phones-header">
+						<div data-spollers class="phones-header__items">
+							<div class="phones-header__item">
+								<a href="#" class="phones-header__phone">8-800-777-49-67</a>
+								<button type="button" data-spoller class="phones-header__arrow _icon-arrow_down"></button>
+								<ul class="phones-header__list">
+									<li><a href="tel:7774967" class="phones-header__phone">777-49-67</a></li>
+									<li><a href="tel:88004967" class="phones-header__phone">8-800-49-67</a></li>
+									<li><a href="tel:2222227" class="phones-header__phone">222-22-27</a></li>
+								</ul>
+							</div>
+						</div>
+						<buttom type="button" class="phones-header__callback">Заказать звонок</buttom>
+					</div>
+
+					<a href="" class="actions-header__favorite _icon-favorite_heart"></a>
+					<div class="actions-header__cart cart-header">
+						<a href="" class="cart-header__icon"><span>0</span></a>
+						<div class="cart-header__body">
+							<div class="cart-header__summ">0 UAH</div>
+							<a href="" class="cart-header__link">Оформить заказ</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="header__catalog catalog-header"></div>
 </header>
