--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,10 +1,10 @@
-<!-- <div id="popup" aria-hidden="true" class="popup">
+<div id="popup" aria-hidden="true" class="popup">
 	<div class="popup__wrapper">
 		<div class="popup__content">
 			<button data-close type="button" class="popup__close">Закрыть</button>
 			<div class="popup__text">
-				Text
+				Здесь будет форма обратной связи
 			</div>
 		</div>
 	</div>
-</div> -->
+</div>
