➕ add catalog card & addapted

--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,13 @@
 								</div>
 								
 								<!-- Если нужна пагинация -->
-								<div class="swiper-pagination">
-
+								<div class="swipper-controls">
+									<div class="swiper-pagination"></div>
+									<div class="fraction-controls">
+										<span class="fraction-controls__current">01</span> / <span class="fraction-controls__all">0</span>
+									</div>
 								</div>
+								
 								<!-- Если нужен скролбар -->
 								<!-- <div class="swiper-scrollbar"></div> -->
 							</div>
@@ -100,6 +104,92 @@
 								</div>
 								<div class="advantages-main__text">Скидки постоянным покупателям. </div>
 							</div>
+						</div>
+					</div>
+				</section>
+				<section class="page__catalog-cards catalog-cards">
+					<div class="catalog-cards__container">
+						<div class="catalog-cards__wrapper">
+
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Каталог ножей</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/01.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Среднеклинковое оружие</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/02.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Длинноклинковое оружие</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/03.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Сувенирные изделия</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/04.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Сопутствующие</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/05.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+							<div class="catalog-cards__item item-card">
+								<div class="item-card__title">Ножевая мастерская</div>
+								<div class="item-card__body">
+									<ul class="item-card__list">
+										<li class="item-card__link"><a href="#">Разделочные</a></li>
+										<li class="item-card__link"><a href="#">Туристические</a></li>
+										<li class="item-card__link"><a href="#">Охотничьи</a></li>
+									</ul>
+									<div class="item-card__image">
+										<img src="@img/catalog-cards/06.jpg" alt="image_knife">
+									</div>
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</section>
