➕ Sec Flashlight & fooret-descrTOP

--- a/src/html/_product-slider.htm
+++ b/src/html/_product-slider.htm
@@ -1,8 +1,8 @@
 <section class="page__product-slider product-slider">
     <div class="product-slider__container">
         <div class="product-slider__header">
-            <h2 class="product-slider__title">@@title</h2>
-            <a href="#" class="product-slider__more _icon-spoler-arrow">@@moretext</a>
+            <h2 class="product-slider__title title-log">@@title</h2>
+            <a href="#" class="product-slider__more title-log-link _icon-spoler-arrow">@@moretext</a>
         </div>
         <!-- Оболочка слайдера -->
         <div class="product-slider__slider swiper">
