➕add catalot & pagging

--- a/src/html/_product-slider.htm
+++ b/src/html/_product-slider.htm
@@ -2,7 +2,7 @@
     <div class="product-slider__container">
         <div class="product-slider__header">
             <h2 class="product-slider__title title-log">@@title</h2>
-            <a href="#" class="product-slider__more title-log-link _icon-spoler-arrow">@@moretext</a>
+            <a href="catalog.html" class="product-slider__more title-log-link _icon-spoler-arrow">@@moretext</a>
         </div>
         <!-- Оболочка слайдера -->
         <div class="product-slider__slider swiper">
