--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,123 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__top top-footer">
+			<div class="top-footer__body">
+
+				<div data-spollers="1024" class="top-footer__spollers spollers-top-footer top-footer__column">
+					<div class="spollers-top-footer__item">
+						<button type="button" data-spoller class="top-footer__title _icon-arrow_down">ИНФОРМАЦИЯ</button>
+						<div class="spollers-top-footer__body">
+							<ul class="top-footer__list">
+								<li class="top-footer__link"><a href="#">Златоустовские ножи в Орске и Орской области</a></li>
+								<li class="top-footer__link"><a href="#">Ножевые стали</a></li>
+								<li class="top-footer__link"><a href="#"></a>О нас</li>
+								<li class="top-footer__link"><a href="#"></a>Условия оплаты и доставки</li>
+								<li class="top-footer__link"><a href="#"></a>Политика конфиденциальности</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div data-spollers="1024" class="top-footer__spollers spollers-top-footer top-footer__column">
+					<div class="spollers-top-footer__item">
+						<button type="button" data-spoller class="top-footer__title _icon-arrow_down">СЛУЖБА ПОДДЕРЖКИ</button>
+						<div class="spollers-top-footer__body">
+							<ul class="top-footer__list">
+								<li class="top-footer__link"><a href="#">Контактная информация</a></li>
+								<li class="top-footer__link"><a href="#">Возврат товара</a></li>
+								<li class="top-footer__link"><a href="#"></a>Карта сайта</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div data-spollers="1024" class="top-footer__spollers spollers-top-footer top-footer__column">
+					<div class="spollers-top-footer__item">
+						<button type="button" data-spoller class="top-footer__title _icon-arrow_down">ДОПОЛНИТЕЛЬНО</button>
+						<div class="spollers-top-footer__body">
+							<ul class="top-footer__list">
+								<li class="top-footer__link"><a href="#">Подарочные сертификаты</a></li>
+								<li class="top-footer__link"><a href="#">Возврат товара</a></li>
+								<li class="top-footer__link"><a href="#"></a>Товары со скидкой</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div data-spollers="1024" class="top-footer__spollers spollers-top-footer top-footer__column">
+					<div class="spollers-top-footer__item">
+						<button type="button" data-spoller class="top-footer__title _icon-arrow_down">ЛИЧНЫЙ КАБИНЕТ</button>
+						<div class="spollers-top-footer__body">
+							<ul class="top-footer__list">
+								<li class="top-footer__link"><a href="#">Личный кабинет</a></li>
+								<li class="top-footer__link"><a href="#">История заказов</a></li>
+								<li class="top-footer__link"><a href="#"></a>Мои закладки</li>
+								<li class="top-footer__link"><a href="#"></a>Рассылка новостей</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+
+		<div class="top-footer__contacts contacts-footer">
+			<div class="contacts-footer__body">
+				<div class="contacts-footer__column">
+					<div class="contacts-footer__title"> КОНТАКТЫ</div>
+					<ul class="contacts-footer__list">
+						<li class="contacts-footer__link contacts-footer__link-icon _icon-footer-phone"><a href="tel:88007774967">8 (800) 777-49-67</a></li>
+						<li class="contacts-footer__link contacts-footer__link-icon _icon-footer-clock">Пн-Пт <br>7:00 - 16:00 (EST)</li>
+						<li class="contacts-footer__link contacts-footer__link-icon _icon-footer-location">ул. Шоссейная, д. 1, офис «6Б»</li>
+						<li class="contacts-footer__link contacts-footer__link-icon"><a href="mailto:info@zlatmax.ru">info@zlatmax.ru</a></li>
+					</ul>
+				</div>
+				<div class="contacts-footer__column">
+					<div class="contacts-footer__title">ПОЛЕЗНЫЕ ССЫЛКИ</div>
+					<ul class="contacts-footer__list">
+						<li class="contacts-footer__link"><a href="#">Способы оплаты и доставки</a></li>
+					</ul>
+				</div>
+				<div class="contacts-footer__column">
+					<div class="contacts-footer__title">НАША ГАРАНТИЯ</div>
+					<ul class="contacts-footer__list">
+						<li class="contacts-footer__link contacts-footer__link-rools">Недовольны своей покупкой? Вы можете вернуть ее в течении 30 дней с даты получения, согласно <span><a href="#">нашим правилам</a></span></li>
+					</ul>
+				</div>
+				<div class="contacts-footer__column">
+					<div class="contacts-footer__title">НОВОСТНАЯ РАССЫЛКА</div>
+					<div class="contacts-footer__subtitle">Подпишитесь прямо сейчас!</div>
+					<form class="contacts-footer__form" action="#" method="POST">
+						<input type="text" name="form[email]" data-error="Error" placeholder="example@gmail.com" class="contacts-footer__input">
+						<button type="submit" class="contacts-footer__button _icon-spoler-arrow"></button>
+						<div class="checkbox">
+							<input id="c_1" data-error="Ошибка" class="checkbox__input" type="checkbox" data-required="email" value="1" name="form[]">
+							<label for="c_1" class="checkbox__label"><span class="checkbox__text">Я прочитал Условия соглашения и 
+								согласен с условиями </span></label>
+						</div>
+					</form>
+				</div>				
+			</div>
+			<div class="contacts-footer__social">
+				<ul class="contacts-footer__social-list">
+					<li class="contacts-footer__sociall-link">
+						<a href="#"><img src="@img/icons/social/fb.svg" alt="FB"></a>
+					</li>
+					<li class="contacts-footer__sociall-link">
+						<a href="#"><img src="@img/icons/social/viber.svg" alt="Viber"></a>
+					</li>
+					<li class="contacts-footer__sociall-link">
+						<a href="#"><img src="@img/icons/social/tel.svg" alt="Tel"></a>
+					</li>
+					<li class="contacts-footer__sociall-link">
+						<a href="#"><img src="@img/icons/social/wa.svg" alt="WatsApp"></a>
+					</li>
+				</ul>
+			</div>
+			
+		</div>
+		<div class="top-footer__bottom bottom-footer">
+			<div class="bottom-footer__text">Все материалы, размещенные на сайте, носят справочный характер и не являются 
+				публичной офертой, определяемойположениями Статьи 437 Гражданского кодекса Pашки-Парашки. 
+				При копировании материалов гиперссылка на www.zlatmax.ru обязательна!</div>
+			<div class="bottom-footer__policy">Златоустовские ножи www.zlatmax.ru ©</div>
+		</div>
 	</div>
 </footer>
