--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -21,7 +21,7 @@
 
 		<div class="header__general general-header">
 			<div class="general-header__container">
-				<a href="" class="general-header__logo"></a>
+				<a href="index.html" class="general-header__logo"></a>
 				<div  data-da=".catalog-header__container, 650" class="general-header__search">
 					<form action="#" class="search-header">
 						<button type="submit" class="search-header__button"></button>
