--- a/src/html/_product-slider.htm
+++ b/src/html/_product-slider.htm
@@ -13,7 +13,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -42,7 +42,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -71,7 +71,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -100,7 +100,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -129,7 +129,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -158,7 +158,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -187,7 +187,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -216,7 +216,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -245,7 +245,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
@@ -274,7 +274,7 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
